--- a/index.html
+++ b/index.html
@@ -50,66 +50,65 @@
 
   <!-------------CUERPO DE LA PAGINA-------------->
   <div class="container mt-4" style="padding-top:8% ;">
+
     <div class="row">
       <div class="col-12" style="text-align: center;">
-        <h1>DATABOX</h1>
+        <img src="LogoRecortado.png" alt="" class="img-fluid">
+        <h2>Potenciando tu Negocio con Facturación Electrónica y Soluciones Digitales Innovadoras</h2>
       </div>
+
       <div class="row">
-        <div class="col-md-8" style="text-align: justify;">
-          <h2>Texto1</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias provident, sunt dignissimos neque accusantium alias illo dolor reprehenderit temporibus illum, exercitationem officiis? Eaque quae ipsam ut cumque tempora ea libero?
+        <div class="col-md-12" style="text-align: center; padding-top: 2%;">
+          <img src="erp1.jpg" alt="" height="75%" width="100%">
+          <h4>
+          <p style="padding-top: 2%;">
+            En DataBox, creamos soluciones digitales robustas para optimizar tus procesos empresariales, desde la facturación electrónica hasta el diseño de aplicaciones móviles personalizadas y bases de datos inteligentes.
           </p>
+          </h4>
         </div>
-        <div class="col-md-4" style="text-align: justify;">
-          <h2>Texto2</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, consequuntur. Quam natus cupiditate quasi amet incidunt iste nobis adipisci, cum sequi nihil minima molestiae est? Voluptatem dolore ab libero deleniti!
-          </p>
-        </div>  
       </div>
+
       <div class="row">
-        <div class="col-12">
-          <h1 style="text-align: center;">TEXTO3</h1>
+        <div class="col-12" style="text-align: justify;">
+          <h1 style="text-align: center;">Nuestros servicios</h1>
+          <div class="row">
+            <div class="col-md-4">
+              <img src="FacturacionElectronica.jpeg" alt="" class="img-fluid">
+              <h1 style="text-align: center;">Facturación Electrónica</h1>
+              <p>
+                La demanda de digitalización en el país, promovida por el Ministerio de Hacienda, ha creado una oportunidad comercial para la automatización de la facturación electrónica y la administración de empresas. DATABOX aspira a establecerse como líder en la creación de aplicaciones para móviles y bases de datos con el objetivo de perfeccionar estos procedimientos.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <img src="AplicacionesMoviles.jpg" alt="" class="img-fluid">
+              <h1 style="text-align: center;">Aplicaciones Móviles</h1>
+              <p>
+                La digitalización creciente de la vida cotidiana ha hecho que las personas estén cada vez más familiarizadas con el uso de aplicaciones móviles, plataformas en línea y servicios digitales. Esto representa una oportunidad para ofrecer soluciones accesibles y automatizadas que se adapten a sus rutinas (facturación digital, e-commerce, gestión remota). También aumenta la expectativa de que los sistemas sean fáciles de usar, intuitivos y disponibles 24/7, como ejemplo los famosos ChatBot muy utilizados en la actualidad.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <img src="BaseDeDatos.jpg" alt="" class="img-fluid">
+              <h1 style="text-align: center;">Bases de Datos Inteligentes</h1>
+              <p>
+                Cuanto pensamos en nuestra visión podríamos definir el concepto como: convertirnos en una empresa líder en la modernización de sistemas de gestión, freciendo soluciones tecnológicas innovadoras y eficientes en las áreas de bases de datos, facturación electrónica y comercio electrónico. Aspiramos a ser reconocidos por brindar consultorías especializadas, soporte técnico de excelencia y desarrollos personalizados que permitan a nuestros clientes optimizar sus operaciones, mejorar su competitividad y adaptarse a las exigencias del mercado digital actual.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12" style="padding-top: 2%; padding-bottom: 2%;">
+            <center>
+              <button type="button" class="btn btn-primary">
+                <a href="contacto.html" style="color: white;"><h1 style="text-align: center;">COTIZA CON NOSOTROS</h1></a>
+              </button>
+            </center>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <!-------------FIN CUERPO DE LA PAGINA-------------->
 
-  <!-------------CARRUSEL-------------->
-
-  <div class="container" style="margin-top: 2%; margin-bottom:2%;"> <!--Contenedor del carrusel-->
-    <div class="row"> 
-      <div class="col-md-12">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="banner1.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner2.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner3.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner4.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-    </div>
-</div>
-<!-------------CARRUSEL-------------->
 
 
   <!-------------PIE DE PAGINA-------------->
@@ -119,7 +118,7 @@
       <div class="col-md-4" style="padding-left: 170px;">
         <h4>ACERCA</h4>
         <div class="content">
-          EN DATABOX ESTAMOS COMPROMETIDOS CON LA CALIDAD DE NUESTROS SERVICIOS PARA QUE SEA UNA EXPERIENCIA INIGUALABLE Y AGRADABLE.
+          DataBox fue fundada en 2025, dentro de la materia de Diseño de Planes de Negocios Asociativa Cooperativa, en la institución ITCA – Fepade, sus miembros fundadores son, Esmeralda, Rodrigo, Guillermo, Anderson y Alexander estudiantes de la carrera Técnico en Ingeniería de Desarrollo de Software en su primer año, en la materia de diseño de planes de negocios en asociatividad cooperativa brindada por la Lic. Mayra García.   
         </div>
       </div>
       <div class="col-md-4" style="padding-left: 200px;">
