--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="col-md-12" style="padding-top: 2%; padding-bottom: 2%;">
             <center>
               <button type="button" class="btn btn-primary">
-                <a href="contacto.html" style="color: white;"><h1 style="text-align: center;">COTIZA CON NOSOTROS</h1></a>
+                <a href="subscribete.html" style="color: white; text-decoration: none;"><h1 style="text-align: center;">COTIZA CON NOSOTROS</h1></a>
               </button>
             </center>
           </div>
