--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/css galeria.css"><!--Css para efecto y orden de las imagenes sobre nuestro equipo-->
+    <link rel="stylesheet" href="banner css.css"><!--Efecto de banner-->
     <title>DataBox</title>
 
 
@@ -14,7 +16,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="logo4.png" alt="databoxLogo" height="104">
+          <img src="artes y fotografias/logo4.png" alt="databoxLogo" height="104">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-            <a class="nav-link active" href="sobrenosotros.html">Sobre nosotros</a>
+            <a class="nav-link active" href="sobrenosotros.html">¡Conózcanos!</a>
             <a class="nav-link active" href="servicios.html">Servicios</a>
             <a class="nav-link active" href="contacto.html">Contactanos</a>
             <a class="nav-link active" href="subscribete.html">Suscripción</a>
@@ -49,67 +51,68 @@
   <!-------------FIN DEL NAV-------------->
 
   <!-------------CUERPO DE LA PAGINA-------------->
-  <div class="container mt-4" style="padding-top:8% ;">
-    <div class="row">
-      <div class="col-12" style="text-align: center;">
-        <h1>DATABOX</h1>
-      </div>
-      <div class="row">
-        <div class="col-md-8" style="text-align: justify;">
-          <h2>Texto1</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias provident, sunt dignissimos neque accusantium alias illo dolor reprehenderit temporibus illum, exercitationem officiis? Eaque quae ipsam ut cumque tempora ea libero?
-          </p>
-        </div>
-        <div class="col-md-4" style="text-align: justify;">
-          <h2>Texto2</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, consequuntur. Quam natus cupiditate quasi amet incidunt iste nobis adipisci, cum sequi nihil minima molestiae est? Voluptatem dolore ab libero deleniti!
-          </p>
-        </div>  
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <h1 style="text-align: center;">TEXTO3</h1>
+  
+  <!--Titulo DATABOX-->
+<div class="container mt-4" style="padding-top: 8%;">
+  <!-- Banner -->
+  <div class="row">
+    <div class="col-12 text-center">
+      <img src="artes y fotografias/Black Gradient Technology YouTube Banner.jpg" alt="banner databox" class="banner-animado" style="width: 1200px; height: 300px; object-fit: cover; border-radius: 10px;">
+    </div>
+  </div>
+<!--fin de banner-->
+  <!-- Fila para texto + video -->
+  <div class="row mt-5 align-items-center">
+    <!-- Columna izquierda: Texto -->
+    <div class="col-md-8">
+      <h2 class="text-center">Nuestra Historia</h2>
+      <p>
+        DATABOX, fundada en marzo del 2025, nació como un proyecto estudiantil por un grupo de 5 jóvenes amantes de la tecnología y el desarrollo de software.<br><br>
+        Nuestro objetivo es ofrecer servicios de creación de datos y registros modernos a la actual demanda que está dando pasos agigantados de actualización, automatización y conectividad.<br><br>
+        Especializados en el sector informático, dedicados a ofrecer soluciones de software, aplicaciones móviles, creación de sistemas personalizados y diseño de bases de datos orientados al área de facturación y ventas e-commerce.
+      </p>
+
+      <h2 class="text-center">Misión</h2>
+      <p>
+        Proporcionar una modernización del sistema de gestión de base de datos, facturación y e-commerce a nuestros clientes. Brindar soluciones, consultorías y soporte técnico de la más alta calidad para facilitar y agilizar los procesos y actividades diarias que satisfagan la demanda actual del mercado salvadoreño.
+      </p>
+
+      <h2 class="text-center">Visión</h2>
+      <p>
+        Posicionarnos como una de las empresas líderes y confiables en el diseño de bases de datos y aplicaciones móviles en El Salvador, y fortalecer a empresas y emprendedores en el desarrollo de sus capacidades a través de herramientas informáticas que ofrecen las nuevas tecnologías.
+      </p>
+    </div>
+
+    <!-- Columna derecha: Video -->
+    <div class="col-md-4 d-flex justify-content-center">
+      <div style="width: 100%;">
+        <h4 style="font-size: 1.1rem; text-align: center; margin-bottom: 15px;">Etiquetanos en tus redes</h4>
+        <div style="background-color: #000; padding: 10px; border-radius: 10px;">
+          <video style="width: 100%; height: auto; object-fit: contain; border-radius: 10px;" controls>
+            <source src="artes y fotografias/Reel de Instagram Resumen fin de año 2024 Aesthetic.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
     </div>
   </div>
-  <!-------------FIN CUERPO DE LA PAGINA-------------->
-
-  <!-------------CARRUSEL-------------->
-
-  <div class="container" style="margin-top: 2%; margin-bottom:2%;"> <!--Contenedor del carrusel-->
-    <div class="row"> 
-      <div class="col-md-12">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="banner1.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner2.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner3.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner4.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-    </div>
 </div>
-<!-------------CARRUSEL-------------->
+
+  <!-- Nuestro equipo -->
+  <div class="row mt-5">
+    <div class="col-12 text-center">
+      <h1>Nuestro Equipo</h1>
+      <h3>Haz clic en cada imagen para conocernos mejor</h3>
+      <section class="image-gallery mb-5" id="imagenes" style="margin-bottom: 50px;">
+        <a href="esmeralda.html" title="Visita el perfil de Esmeralda"><img src="artes y fotografias/esme.png" alt=""></a>
+        <a href="rodrigo.html" title="Visita el perfil de Rodrigo"><img src="artes y fotografias/rodrigo avelar foto circular.png" alt=""></a>
+        <a href="anderson.html" title="Visita el perfil de Anderson"><img src="artes y fotografias/anderson ramos foto circular.png" alt=""></a>
+        <a href="alexander.html" title="Visita el perfil de Alexander"><img src="artes y fotografias/alexander foto circular.png" alt=""></a>
+        <a href="guillermo.html" title="Visita el perfil de Guillermo"><img src="artes y fotografias/alan foto circular.png" alt=""></a>
+      </section>
+    </div>
+  </div>
+</div>
+  <!-------------FIN CUERPO DE LA PAGINA-------------->
 
 
   <!-------------PIE DE PAGINA-------------->
@@ -159,5 +162,6 @@
   </div>
 </font>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<!--Fin de pagina footer-->
 </body>
 </html>
