--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-            <a class="nav-link active" href="sobrenosotros.html">Sobre nosotros</a>
+            <a class="nav-link active" href="sobrenosotros.html">¡Conózcanos!</a>
             <a class="nav-link active" href="servicios.html">Servicios</a>
             <a class="nav-link active" href="contacto.html">Contactanos</a>
             <a class="nav-link active" href="subscribete.html">Suscripción</a>
