--- a/servicios.html
+++ b/servicios.html
@@ -22,21 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-            <a class="nav-link active" href="sobrenosotros.html">Sobre nosotros</a>
+            <a class="nav-link active" href="sobrenosotros.html">¡Conózcanos!</a>
             <a class="nav-link active" href="servicios.html">Servicios</a>
             <a class="nav-link active" href="contacto.html">Contactanos</a>
             <a class="nav-link active" href="subscribete.html">Suscripción</a>
-          </div>
-          <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown link
-            </a>
-
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
           </div>
         </div>
         <form class="d-flex" role="search" style="margin-right: 3%;">
@@ -48,74 +37,214 @@
   </header>
   <!-------------FIN DEL NAV-------------->
 
+
   <!-------------CUERPO DE LA PAGINA-------------->
   <div class="container mt-4" style="padding-top:8% ;">
     <div class="row">
-      <div class="col-12" style="text-align: center;">
-        <h1>DATABOX</h1>
-      </div>
-      <div class="row">
-        <div class="col-md-8" style="text-align: justify;">
-          <h2>Texto1</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias provident, sunt dignissimos neque accusantium alias illo dolor reprehenderit temporibus illum, exercitationem officiis? Eaque quae ipsam ut cumque tempora ea libero?
-          </p>
+      <div class="col-md-12" style="text-align: center;">
+        <h1 style="color: mediumpurple;">SERVICIOS</h1>
+              </div>
+              <!----------FILA #1----------->
+              <div class="row"><!--Start card-->
+                <div class="col-md-4" style="text-align: start;">
+                  <div class="card mb-3" style="max-width: 540px; height: 230px; border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="Analisis de factibilidad del sistema.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Analisis de factibilidad del sistema</h5>
+                <p class="card-text">Realizamos un estudio de factibilidad para determinar la posibilidad de poder desarrollar un negocio o un proyecto que espera implementar.</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-4" style="text-align: justify;">
-          <h2>Texto2</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, consequuntur. Quam natus cupiditate quasi amet incidunt iste nobis adipisci, cum sequi nihil minima molestiae est? Voluptatem dolore ab libero deleniti!
-          </p>
-        </div>  
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <h1 style="text-align: center;">TEXTO3</h1>
+        </div><!--End card-->
+        <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="base de datos.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Creacion de base de datos</h5>
+                <p class="card-text">Creamos una base de datos en el que se almacenan datos de manera organizada para poder acceder a ellos siempre que se requiera</p>
+              </div>
+            </div>
+          </div>
         </div>
+        </div><!--End card-->
+        <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="software.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Software a la medida de la empresa</h5>
+                <p class="card-text">programa personalizado diseñado específicamente para cubrir las necesidades de su empresa en particular. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div><!--End card-->
+      </div>
+      <!----------FILA #2----------->
+              <div class="row">
+                <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="Analisis de datos.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Analisis de datos</h5>
+                <p class="card-text">Inspeccionamos, limpiamos, transformamos y modelamos grandes volúmenes de datos con el objetivo de descubrir información útil, llegar a conclusiones y respaldar la toma de decisiones.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div><!--End card-->
+        <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="facturacion electronica.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Transformacion digital en sistema de facturacion</h5>
+                <p class="card-text">Modernizamos y optimizamos la emisión, gestión y almacenamiento de facturas mediante tecnologías digitales.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div><!--End card-->
+        <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <div class="card mb-3"style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="asesoria.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Asesoria de innovacion digital</h5>
+                <p class="card-text">ayudamos a empresas y organizaciones a adoptar tecnologías y estrategias digitales para mejorar sus procesos, productos o servicios. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div><!--End card-->
+      </div>
+      <!----------FILA #3----------->
+              <div class="row">
+                <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="app.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Diseño de prototipo del sistema de facturación o aplicación móvil</h5>
+                <p class="card-text">Creación de una versión preliminar del software para visualizar su estructura, funcionalidades y flujo de uso antes de su desarrollo completo.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div><!--End card-->
+        <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="soporte.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Garantía y Soporte</h5>
+                <p class="card-text">nos comprometememos con el cliente de reparar, reemplazar o solucionar problemas dentro de un período determinado, sin costo adicional para el cliente.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div><!--End card-->
+        <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="ecomerce.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Integración de compras en línea (e-comerce)</h5>
+                <p class="card-text">Te ayudamos a digitalizar tu negocio con una solución de e-commerce totalmente integrada, optimizando pagos, envíos y gestión de clientes para que vendas de forma fácil y segura.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div><!--End card-->
+      </div>
+
+    </div>
+  </div>
+  <!---Linea que separa las cards del carrusel-->
+<div class="container-fluid">
+   <div class="row" style="text-align: center;">
+        <div class="col-12" style="background-color:mediumpurple;">
+          <h2 style="color: rgb(73, 46, 98);">TAMBIEN CONTAMOS CON PLANES PERSONALIZADOS</h2>
+        </div>
+    </div>
+</div>
+<!--fin de la linea-->
+  <div class container style="padding-top: 50px;"><!--CARRUSEL-->
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <img src="emprendedores.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="micro-emprendedores.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="empresarios.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+    </div>
+  </div><!--fin de contenedor de carusel-->
   <!-------------FIN CUERPO DE LA PAGINA-------------->
 
-  <!-------------CARRUSEL-------------->
-
-  <div class="container" style="margin-top: 2%; margin-bottom:2%;"> <!--Contenedor del carrusel-->
-    <div class="row"> 
-      <div class="col-md-12">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="banner1.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner2.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner3.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner4.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-    </div>
-</div>
-<!-------------CARRUSEL-------------->
 
 
   <!-------------PIE DE PAGINA-------------->
   <font color="white">
   <div class="container-fluid" style="background-color: #2a3135;"><!--Conteiner footer-->
-    <div class="row" style="padding-top: 50px; padding-bottom: 5%;">
+    <div class="row" style="padding-top: 50px; padding-bottom: 5%; margin-top: 50px;">
       <div class="col-md-4" style="padding-left: 170px;">
         <h4>ACERCA</h4>
         <div class="content">
