--- a/index.html
+++ b/index.html
@@ -27,17 +27,6 @@
             <a class="nav-link active" href="contacto.html">Contactanos</a>
             <a class="nav-link active" href="subscribete.html">Suscripción</a>
           </div>
-          <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown link
-            </a>
-
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </div>
         </div>
         <form class="d-flex" role="search" style="margin-right: 3%;">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
@@ -47,6 +36,20 @@
     </nav>
   </header>
   <!-------------FIN DEL NAV-------------->
+
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="5000">
+      <img src="banner1.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="5000">
+      <img src="banner4.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="5000">
+      <img src="banner3.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
 
   <!-------------CUERPO DE LA PAGINA-------------->
   <div class="container mt-4" style="padding-top:8% ;">
