--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="index_Databox.html">
           <img src="artes y fotografias/logo4.png" alt="databoxLogo" height="104">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="index_Databox.html">Inicio</a>
             <a class="nav-link active" href="sobrenosotros.html">¡Conózcanos!</a>
             <a class="nav-link active" href="servicios.html">Servicios</a>
             <a class="nav-link active" href="contacto.html">Contactanos</a>
@@ -117,7 +117,7 @@
       <div class="col-md-4" style="padding-left: 200px;">
         <h4>LINKS</h4>
         <ul class="list-unstyled">
-          <li><a class="nav-link" href="index.html">INICIO</a></li>
+          <li><a class="nav-link" href="index_Databox.html">INICIO</a></li>
           <li><a class="nav-link" href="sobrenosotros.html">SOBRE NOSOTROS</a></li>
           <li><a class="nav-link" href="servicios.html">SERVICIOS</a></li>
           <li><a class="nav-link active" href="contacto.html">CONTACTO</a></li>
