--- a/esmeralda.html
+++ b/esmeralda.html
@@ -25,7 +25,7 @@
       <!-- Botones opcionales -->
       <div class="botones-circulares">
         <a href="sobrenosotros.html" class="btn-circular btn-amarillo">Volver a ¡Conózcanos!</a>
-        <a href="index_Databox.html" class="btn-circular btn-rojo">Ir al inicio de pagina</a>
+        <a href="index.html" class="btn-circular btn-rojo">Ir al inicio de pagina</a>
       </div>
     </div>
   </div>
