Cambio menor a footer

--- a/servicios.html
+++ b/servicios.html
@@ -248,7 +248,7 @@
       <div class="col-md-4" style="padding-left: 170px;">
         <h4>ACERCA</h4>
         <div class="content">
-          EN DATABOX ESTAMOS COMPROMETIDOS CON LA CALIDAD DE NUESTROS SERVICIOS PARA QUE SEA UNA EXPERIENCIA INIGUALABLE Y AGRADABLE.
+          DataBox fue fundada en 2025, dentro de la materia de Diseño de Planes de Negocios Asociativa Cooperativa, en la institución ITCA – Fepade, sus miembros fundadores son, Esmeralda, Rodrigo, Guillermo, Anderson y Alexander estudiantes de la carrera Técnico en Ingeniería de Desarrollo de Software en su primer año, en la materia de diseño de planes de negocios en asociatividad cooperativa brindada por la Lic. Mayra García.  
         </div>
       </div>
       <div class="col-md-4" style="padding-left: 200px;">
