--- a/contacto.html
+++ b/contacto.html
@@ -148,7 +148,7 @@
       <div class="col-md-4" style="padding-left: 170px;">
         <h4>ACERCA</h4>
         <div class="content">
-          En DATABOX,estamos comprometidos con la invocacion y la modernizacion tecnologica para que nuestros clientes disfurten soluciones seguras, personalizadas y eficientes.Nuestro objetivo es facilitar la digilitacion de los negocios, ofreciendo herramientas que optimicen la administracion de datos y la facturacion electronica.
+          DataBox fue fundada en 2025, dentro de la materia de Diseño de Planes de Negocios Asociativa Cooperativa, en la institución ITCA – Fepade, sus miembros fundadores son, Esmeralda, Rodrigo, Guillermo, Anderson y Alexander estudiantes de la carrera Técnico en Ingeniería de Desarrollo de Software en su primer año, en la materia de diseño de planes de negocios en asociatividad cooperativa brindada por la Lic. Mayra García.  
         </div>
       </div>
       <div class="col-md-4" style="padding-left: 200px;">
