--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a class="nav-link active" href="servicios.html">Servicios</a>
             <a class="nav-link active" href="contacto.html">Contactanos</a>
             <a class="nav-link active" href="subscribete.html">Suscripción</a>
+            <a class="nav-link active" href="Facturacion.html">Generar Factura</a>
           </div>
         </div>
         <form class="d-flex" role="search" style="margin-right: 3%;">
