--- a/Facturacion.html
+++ b/Facturacion.html
@@ -37,90 +37,86 @@
     </nav>
   </header>
   <!-------------FIN DEL NAV-------------->
-  <div class="container" style="margin-top: 160px;">
-    <h1 class="text-center">Cotiza en DataBox</h1>
-  <p class="text-center fs-5">Recibe las últimas noticias y actualizaciones directamente en tu correo electrónico.</p>
-</div>
 
-  <!-------------CARRUSEL-------------->
-  
-
-  <div class="container" style="margin-top: 2%; margin-bottom:2%;"> <!--Contenedor del carrusel-->
-    <div class="row"> 
-      <div class="col-md-12">
-        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="banner1.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner2.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner3.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-            <div class="carousel-item">
-              <img src="banner4.png" class="d-block w-100" alt="..." style="height: 600px;">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="5000">
+      <img src="banner1.png" class="d-block w-100" alt="...">
     </div>
+    <div class="carousel-item" data-bs-interval="5000">
+      <img src="banner4.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="5000">
+      <img src="banner3.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
 </div>
-<!-------------CARRUSEL-------------->
 
-  <!-------------SUSCRIPCION-------------->
-<div class="container" style="margin-top: 100px;"></div>
-    <div class="row justify-content-left">
+  <!-------------CUERPO DE LA PAGINA-------------->
+  <div class="container mt-8" style="padding-top:2% ;">
+    <div class="container" style="margin-top: 2px;">
+    <div class="row justify-content-center">
+        
        <div class="col-md-1"></div>
-    <div class="col-md-3">
+    <div class="col-md-8">
+        <h1>Facturación Electrónica</h1>
     <form>
-      <div class="mb-3">
+        <div class="mb-8">
+            <label for="name" class="form-label">Empresa</label>
+            <input type="text" class="form-control" id="name" placeholder="Nombre de su empresa/Negocio" required>
+        </div>
+        <div class="mb-8">
+            <label for="name" class="form-label">Cliente</label>
+            <input type="text" class="form-control" id="name" placeholder="Nombre del cliente" required>
+          </div>
+      <div class="mb-8">
         <label for="email" class="form-label">Correo Electrónico</label>
         <input type="email" class="form-control" id="email" placeholder="usuario@dominio.com" required> 
       </div>
-      <div class="mb-3">
-        <label for="name" class="form-label">Nombre Completo</label>
-        <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre completo" required>
-      </div>
-      <div class="mb-3">
+      <div class="mb-8">
         <label for="phone" class="form-label">Teléfono</label>
         <input type="tel" class="form-control" id="phone" placeholder="Ingresa tu número de teléfono" required>
       </div>
-      <div class="mb-3">
-        <label for="preferences" class="form-label">Tipos de planes</label>
+      <div class="mb-8">
+        <label for="name" class="form-label">Artículo</label>
+        <input type="text" class="form-control" id="name" placeholder="Nombre del Artículo" required>
+      </div>
+      <div class="mb-8">
+        <label for="precio" class="form-label">Precio del articulo/s</label>
+        <input type="text" class="form-control" id="precio" placeholder="$0.00" required>
+      </div>
+      <div class="mb-8">
+        <label for="precio" class="form-label">Cantidad</label>
+        <input type="number" class="form-control" id="cantidad" placeholder="0" required>
+      </div>
+      <div class="mb-8">
+        <label for="preferences" class="form-label">Tipo de persona</label>
         <select class="form-select" id="preferences" required>
-          <option value="" disabled selected>Selecciona tus preferencias</option>
-          <option value="news">Emprendedores</option>
-          <option value="updates">Microempresarios</option>
-          <option value="offers">Empresarios</option>
+          <option value="" disabled selected>Selecciona tus tipo de persona</option>
+          <option value="news">Persona Natural</option>
+          <option value="updates">Persona jurídica</option>
         </select>
       </div>
-      <div class="container mb-4">
-        <a href="https://www.canva.com/design/DAGir1y9etY/HfSM4UuRE1V5U4oA7HwdMg/view?utm_content=DAGir1y9etY&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h4d52c367b2" target="_blank" class="btn btn-outline-secondary">
-          Ver opciones de paquetes
-        </a>
-      </div>
-
-      <div class="mb-3 form-check">
+      <div class="mb-8 form-check">
         <input type="checkbox" class="form-check-input" id="terms" required>
         <label class="form-check-label" for="terms">Acepto los términos y condiciones</label>
       </div>
       <div class="container" style=" margin-bottom: 80px;">
-      <button type="submit" class="btn btn-primary">¡Cotiza ya!</button>
+      <button type="submit" class="btn btn-primary" value="Llamar función msg" onclick="mensaje()">¡Generar factura!</button>
+      <script type="text/javascript">
+        function mensaje(){
+            alert("¡Datos guardados correctamente!")
+        }
+        
+      </script>
       </div>
     </div>
+</div>
     </form>
+  </div>
+</div>
+  <!-------------FIN CUERPO DE LA PAGINA-------------->
 
-  <!-------------FIN DE SUSCRIPCION-------------->
 
 
   <!-------------PIE DE PAGINA-------------->
@@ -130,7 +126,7 @@
       <div class="col-md-4" style="padding-left: 170px;">
         <h4>ACERCA</h4>
         <div class="content">
-          DataBox fue fundada en 2025, dentro de la materia de Diseño de Planes de Negocios Asociativa Cooperativa, en la institución ITCA – Fepade, sus miembros fundadores son, Esmeralda, Rodrigo, Guillermo, Anderson y Alexander estudiantes de la carrera Técnico en Ingeniería de Desarrollo de Software en su primer año, en la materia de diseño de planes de negocios en asociatividad cooperativa brindada por la Lic. Mayra García.  
+          DataBox fue fundada en 2025, dentro de la materia de Diseño de Planes de Negocios Asociativa Cooperativa, en la institución ITCA – Fepade, sus miembros fundadores son, Esmeralda, Rodrigo, Guillermo, Anderson y Alexander estudiantes de la carrera Técnico en Ingeniería de Desarrollo de Software en su primer año, en la materia de diseño de planes de negocios en asociatividad cooperativa brindada por la Lic. Mayra García.   
         </div>
       </div>
       <div class="col-md-4" style="padding-left: 200px;">
