--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="index_Databox.html">
           <img src="artes y fotografias/logo4.png" alt="databoxLogo" height="104">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,12 +23,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="index_Databox.html">Inicio</a>
             <a class="nav-link active" href="sobrenosotros.html">¡Conózcanos!</a>
             <a class="nav-link active" href="servicios.html">Servicios</a>
             <a class="nav-link active" href="contacto.html">Contactanos</a>
             <a class="nav-link active" href="subscribete.html">Suscripción</a>
-            <a class="nav-link active" href="Facturacion.html">Generar Factura</a>
+          </div>
+          <div class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown link
+            </a>
+
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
           </div>
         </div>
         <form class="d-flex" role="search" style="margin-right: 3%;">
@@ -57,7 +67,7 @@
     <div class="col-md-8">
       <h2 class="text-center">Nuestra Historia</h2>
       <p>
-        DATABOX, fundada en marzo del 2025, nació como un proyecto estudiantil por un grupo de 5 jóvenes amantes de la tecnología y el desarrollo de software.<br><br>
+        DATABOX, fundada en marzo del 2025, nació como un proyecto estudiantil por un grupo de 6 jóvenes amantes de la tecnología y el desarrollo de software.<br><br>
         Nuestro objetivo es ofrecer servicios de creación de datos y registros modernos a la actual demanda que está dando pasos agigantados de actualización, automatización y conectividad.<br><br>
         Especializados en el sector informático, dedicados a ofrecer soluciones de software, aplicaciones móviles, creación de sistemas personalizados y diseño de bases de datos orientados al área de facturación y ventas e-commerce.
       </p>
@@ -94,10 +104,11 @@
       <h3>Haz clic en cada imagen para conocernos mejor</h3>
       <section class="image-gallery mb-5" id="imagenes" style="margin-bottom: 50px;">
         <a href="esmeralda.html" title="Visita el perfil de Esmeralda"><img src="artes y fotografias/esme.png" alt=""></a>
-        <a href="rodrigo.html" title="Visita el perfil de Rodrigo"><img src="artes y fotografias/rodrigo avelar foto circular.png" alt=""></a>
-        <a href="anderson.html" title="Visita el perfil de Anderson"><img src="artes y fotografias/anderson ramos foto circular.png" alt=""></a>
-        <a href="alexander.html" title="Visita el perfil de Alexander"><img src="artes y fotografias/alexander foto circular.png" alt=""></a>
-        <a href="guillermo.html" title="Visita el perfil de Guillermo"><img src="artes y fotografias/alan foto circular.png" alt=""></a>
+        <a href="rodrigo.html" title="Visita el perfil de Rodrigo"><img src="artes y fotografias/rodrigoweb.png" alt=""></a>
+        <a href="anderson.html" title="Visita el perfil de Anderson"><img src="artes y fotografias/andersonweb.png" alt=""></a>
+        <a href="alexander.html" title="Visita el perfil de Alexander"><img src="artes y fotografias/alexanderweb.png" alt=""></a>
+        <a href="Liss.html" title="Visita el perfil de Liss"><img src="artes y fotografias/lissweb.png" alt=""></a>
+        <a href="Omar.html" title="Visita el perfil de Omar"><img src="artes y fotografias/omarweb.png" alt=""></a>
       </section>
     </div>
   </div>
@@ -118,7 +129,7 @@
       <div class="col-md-4" style="padding-left: 200px;">
         <h4>LINKS</h4>
         <ul class="list-unstyled">
-          <li><a class="nav-link" href="index.html">INICIO</a></li>
+          <li><a class="nav-link" href="index_Databox.html">INICIO</a></li>
           <li><a class="nav-link" href="sobrenosotros.html">SOBRE NOSOTROS</a></li>
           <li><a class="nav-link" href="servicios.html">SERVICIOS</a></li>
           <li><a class="nav-link active" href="contacto.html">CONTACTO</a></li>
