--- a/Liss.html
+++ b/Liss.html
@@ -5,26 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <!-- usa un nombre sin espacios -->
-  <link rel="stylesheet" href="anderson css.css">
-  <title>Perfil Anderson</title>
+  <link rel="stylesheet" href="Liss.css">
+  <title>Perfil Liss</title>
 </head>
 <body>
-  <!-- Perfil personal Anderson -->
+  <!-- Perfil personal Liss -->
   <div class="container min-vh-100 d-flex align-items-center py-5">
     <div class="row w-100 align-items-center g-4">
       <!-- Columna izquierda: Foto -->
       <div class="col-md-6 text-center">
-        <img src="artes y fotografias/andersonweb.png"
-             alt="Anderson"
+        <img src="artes y fotografias/lissweb.png"
+             alt="Liss"
              class="perfil-foto img-fluid">
       </div>
 
       <!-- Columna derecha: Nombre y descripción -->
       <div class="col-md-6 text-center text-md-start">
-        <h1 class="nombre-perfil">Anderson</h1>
+        <h1 class="nombre-perfil">Liss</h1>
         <p class="perfil-descripcion">
-           <br>Joven con mucho dinamismo, muy hábil en el desarrollo de sistemas funcionales adaptables a cualquier tipo de negocio, sociable y con experiencia en atención al cliente.
-          • Porgramador Junior y area de ventas
+           <br>Estudiante de ITCA FEPADE en técnico en ingeniería en desarrollo de software, con
+          fortalezas en resolución de problemas y pensamiento crítico.<br>
+          • Analista y desarrolladora de aplicaciones web y móviles.
         </p>
 
         <div class="botones-circulares justify-content-center justify-content-md-start">
