--- a/alexander.html
+++ b/alexander.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-     <link rel="stylesheet" href="alexander css.css">
-    <title>Perfil Alexander</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <!-- usa un nombre sin espacios -->
+  <link rel="stylesheet" href="alexander css.css">
+  <title>Perfil Alexander</title>
 </head>
 <body>
-      <!--Perfil personal Alexander-->
+  <!-- Perfil personal Alexander -->
+  <div class="container min-vh-100 d-flex align-items-center py-5">
+    <div class="row w-100 align-items-center g-4">
+      <!-- Columna izquierda: Foto -->
+      <div class="col-md-6 text-center">
+        <img src="artes y fotografias/alexanderweb.png"
+             alt="Alexander"
+             class="perfil-foto img-fluid">
+      </div>
 
-<div class="container d-flex align-items-center justify-content-center min-vh-100">
-  <div class="row w-100 align-items-center">
-    <!-- Columna izquierda: Foto -->
-    <div class="col-md-6 text-center">
-      <img src="artes y fotografias/alexander foto circular.png" alt="Alexander" class="perfil-foto">
-    </div>
+      <!-- Columna derecha: Nombre y descripción -->
+      <div class="col-md-6 text-center text-md-start">
+        <h1 class="nombre-perfil">Alexander</h1>
+        <p class="perfil-descripcion">
+          Estudiante de Tecnico en desarrollo de Software, creativo experto en tecnologias HTML y CSS. <br>
+          • Desarrolador WEB
+        </p>
 
-    <!-- Columna derecha: Nombre y descripción -->
-    <div class="col-md-6 text-center text-md-start">
-      <h1 class="nombre-perfil">Alexander</h1>
-      <p class="perfil-descripcion">Estudiante de ITCA-FEPADE en la carrera de Técnico en Desarrollo de Software, analista de factibilidad de sistema, conocimiento en el desarrollo de páginas web, aplicaciones móviles y gestión de comunidades.<br>•	Comunity Manager <br>
-•	Desarrollador de aplicaciones móviles especializado en facturación y ventas e-comerce.
- </p>
-      <!-- Botones opcionales -->
-      <div class="botones-circulares">
-        <a href="sobrenosotros.html" class="btn-circular btn-amarillo">Volver a ¡Conózcanos!</a>
-        <a href="index.html" class="btn-circular btn-rojo">Ir al inicio de pagina</a>
+        <div class="botones-circulares justify-content-center justify-content-md-start">
+          <a href="sobrenosotros.html" class="btn-circular btn-amarillo">Volver a ¡Conózcanos!</a>
+          <a href="index_Databox.html" class="btn-circular btn-rojo">Ir al inicio de página</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
-    
 </body>
 </html>
