--- a/rodrigo.html
+++ b/rodrigo.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-     <link rel="stylesheet" href="rodigo css.css">
-    <title>Perfil Rodrigo</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="rodigo css.css">
+  <title>Perfil Rodrigo</title>
 </head>
 <body>
+  <!-- Perfil personal Rodrigo -->
+  <div class="container min-vh-100 d-flex align-items-center py-5">
+    <div class="row w-100 align-items-center g-4">
+      <!-- Columna izquierda: Foto -->
+      <div class="col-md-6 text-center">
+        <img src="artes y fotografias/rodrigoweb.png"
+             alt="Rodrigo"
+             class="perfil-foto img-fluid">
+        <!-- Si la cara queda muy abajo/arriba, puedes añadir:
+             class="perfil-foto img-fluid ajuste-arriba"
+             o  class="perfil-foto img-fluid ajuste-abajo"
+        -->
+      </div>
 
-     <!--Perfil personal Rodrigo-->
+      <!-- Columna derecha: Nombre y descripción -->
+      <div class="col-md-6 text-center text-md-start">
+        <h1 class="nombre-perfil">Rodrigo</h1>
+        <p class="perfil-descripcion">
+          Estudiante de Técnico en Ingeniería en Desarrollo de Software, con varios años de
+          experiencia en atención al cliente, inglés avanzado y manejo de diferentes lenguajes
+          de programación. <br>
+          • Subcoordinador y jefe de ventas y distribución.
+        </p>
 
-<div class="container d-flex align-items-center justify-content-center min-vh-100">
-  <div class="row w-100 align-items-center">
-    <!-- Columna izquierda: Foto -->
-    <div class="col-md-6 text-center">
-      <img src="artes y fotografias/rodrigo avelar foto circular.png" alt="Rodrigo" class="perfil-foto">
-    </div>
-
-    <!-- Columna derecha: Nombre y descripción -->
-    <div class="col-md-6 text-center text-md-start">
-      <h1 class="nombre-perfil">Rodrigo</h1>
-      <p class="perfil-descripcion">Estudiante de Técnico en Ingeniería de Desarrollo de Software, varios años de experiencia en atención al cliente, ingles avanzado y experiencia en diferentes lenguajes de programación.<br>•	Sub-Coordinador y jefe de ventas y distribución. </p>
-      <!-- Botones opcionales -->
-      <div class="botones-circulares">
-        <a href="sobrenosotros.html" class="btn-circular btn-amarillo">Volver a ¡Conózcanos!</a>
-        <a href="index.html" class="btn-circular btn-rojo">Ir al inicio de pagina</a>
+        <div class="botones-circulares justify-content-center justify-content-md-start">
+          <a href="sobrenosotros.html" class="btn-circular btn-amarillo">Volver a ¡Conózcanos!</a>
+          <a href="index_Databox.html" class="btn-circular btn-rojo">Ir al inicio de página</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
-    
 </body>
 </html>
