--- a/esmeralda.html
+++ b/esmeralda.html
@@ -30,7 +30,7 @@
 
         <div class="botones-circulares justify-content-center justify-content-md-start">
           <a href="sobrenosotros.html" class="btn-circular btn-amarillo">Volver a ¡Conózcanos!</a>
-          <a href="index_Databox.html" class="btn-circular btn-rojo">Ir al inicio de página</a>
+          <a href="index.html" class="btn-circular btn-rojo">Ir al inicio de página</a>
         </div>
       </div>
     </div>
