--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -23,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index_Databox.html">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
             <a class="nav-link active" href="sobrenosotros.html">¡Conózcanos!</a>
             <a class="nav-link active" href="servicios.html">Servicios</a>
             <a class="nav-link active" href="contacto.html">Contactanos</a>
